# AutoGemini

./: Cargo.toml
src/: main.rs
src/ai_functions/: ai_func_architect.rs  ai_func_backend.rs  ai_func_managing.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
